imported jquery's production minified file and began to format the html.

--- a/errand_author.html
+++ b/errand_author.html
@@ -2,10 +2,42 @@
 <html lang="en">
 
 <head>
+
+    <!--  Google Fonts imported here  -->
+    <link 
+    rel="preconnect" 
+    href="https://fonts.googleapis.com"
+    >
+    <link 
+    rel="preconnect" 
+    href="https://fonts.gstatic.com" 
+    crossorigin
+    >
+    <link 
+    href="https://fonts.googleapis.com/css2?family=Mohave:wght@300&family=Titillium+Web:wght@600&display=swap" 
+    rel="stylesheet"
+    >
+
+    <!--  Reset Styles  -->
+    <style>
+        body {
+          margin: 0 0;
+          padding: 0 0;
+        }
+        h1,
+        p,
+        ul {
+          margin-block-start: 0;
+          margin-block-end: 0;
+        }
+    </style>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Errand Author</title>
+
 </head>
 
 <body>
@@ -15,6 +47,14 @@
         <h1 id="task-manager__heading">
             Errand Author
         </h1>
+
+        <p id="task-manager__description">
+            Add, Emphasize, & Delete Tasks all from your browser!
+        </p>
+
+        <ul id="task-manager__list">
+            
+        </ul>
 
     </div>
 
