added javascript file and began working with JQuery by writing code to remove a task by left-click. Also added addtl styles to the app.

--- a/errand_author.html
+++ b/errand_author.html
@@ -64,9 +64,29 @@
 
         <ul id="task-manager__list">
 
+            <li id="one" class="task-list__item">
+                Pick up fresh bananas
+            </li>
+
+            <li id="two" class="task-list__item">
+                Mow & Trim the lawn
+            </li>
+
+            <li id="three" class="task-list__item">
+                Accurately line up landscaping bricks
+            </li>
+
+            <li id="four" class="task-list__item">
+                Send out community newsletter
+            </li>
+
         </ul>
 
     </div>
+
+    <!--  Connecting JavaScript resources  -->
+    <script src="resources/jquery-3.6.0.min.js"></script>
+    <script src="resources/script.js"></script>
 
 </body>
 
