creating form to allow for task additions to list.

--- a/errand_author.html
+++ b/errand_author.html
@@ -80,6 +80,11 @@
                 Send out community newsletter
             </li>
 
+            <form id="add-task-form">
+                <label for="addition-field">Add a task below:</label>
+                <input type="text" id="addition-field" name="addition-field" size="24"/>
+            </form>
+
         </ul>
 
     </div>
