--- a/errand_author.html
+++ b/errand_author.html
@@ -64,7 +64,7 @@
 
         <ul id="task-manager__list">
 
-            <li id="one" class="task-list__item">
+            <li class="task-list__item">
                 Pick up fresh bananas
             </li>
 
