added a fade-in animation to help hide the edit input long enough for the user to avoid seeing it while double-clicking to remove a task.

--- a/errand_author.html
+++ b/errand_author.html
@@ -83,7 +83,7 @@
         </ul>
 
         <form id="add-task-form">
-            <label for="addition-field">Add a task below:</label>
+            <label for="addition-field">Add a task:</label>
             <input type="text" id="addition-field" name="addition-field" size="24"/>
         </form>
 
