--- a/errand_author.html
+++ b/errand_author.html
@@ -62,6 +62,10 @@
 
         </section>
 
+        <section id="task-dashboard">
+            
+        </section>
+
         <ul id="task-manager__list">
 
             <li class="task-list__item">
