beginning work on a default dashboard message listing # of tasks currently up.

--- a/errand_author.html
+++ b/errand_author.html
@@ -74,13 +74,13 @@
                 </p>
             </li>
 
-            <li id="two" class="task-list__item">
+            <li class="task-list__item">
                 <p>
                     Mow & Trim the lawn
                 </p>
             </li>
 
-            <li id="three" class="task-list__item">
+            <li class="task-list__item">
                 <p>
                     Send out community newsletter
                 </p>
