--- a/errand_author.html
+++ b/errand_author.html
@@ -97,7 +97,7 @@
 
     <!--  Connecting JavaScript resources  -->
     <script src="resources/jquery-3.6.0.min.js"></script>
-    <script src="resources/script.js"></script>
+    <script src="resources/jquery-script.js"></script>
 
 </body>
 
